--- a/package.json
+++ b/package.json
@@ -6,16 +6,39 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/aphrodite": "^2.0.0",
+    "@types/assert": "^1.5.6",
+    "@types/dagre": "^0.7.47",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^17.0.35",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
+    "@types/uuid": "^8.3.4",
+    "@types/yargs": "^17.0.10",
+    "ace-builds": "^1.5.0",
+    "aphrodite": "^2.4.0",
+    "assert": "^2.0.0",
+    "dagre": "^0.8.5",
+    "fs": "^0.0.1-security",
+    "immer": "^9.0.14",
     "react": "^18.1.0",
+    "react-ace": "^10.1.0",
     "react-dom": "^18.1.0",
+    "react-flow": "^1.0.3",
+    "react-flow-renderer": "^10.2.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4",
+    "uuid": "^8.3.2",
+    "web-vitals": "^2.1.4",
+    "yargs": "^17.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test-script": "ts-node ./src/testConvertGraph.ts"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@tsconfig/recommended": "^1.0.1"
   }
 }
